fix(#3): try fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ html,
 body {
   overflow-x: hidden;
   /* min-width: 360px; */
-  scrollbar-gutter: stable;
+  /* scrollbar-gutter: stable; */
 }
 
 body {
